首页进行更改，在登陆后根据用户初始化菜单，并在Top页显示当前登陆用户名以及角色 ，新增用户信息及修改密码链接，

--- a/ManageSYS/center.html
+++ b/ManageSYS/center.html
@@ -22,7 +22,7 @@
                 &nbsp;
             </td>
             <td width="147" valign="top" id="lefttd">
-                <iframe height="100%" width="100%"  frameborder="0" src="left.html" name="leftFrame"
+                <iframe height="100%" width="100%"  frameborder="0" src="left.aspx" name="leftFrame"
                     id="leftFrame" title="leftFrame"></iframe>
             </td>
             <td width="10" bgcolor="#add2da" class="t3" onclick="switchSysBar()">
@@ -30,7 +30,7 @@
                     <img src="images/open.gif" name="img1" id="img1" alt="" /></span>
             </td>
             <td valign="top">
-                <iframe height="100%" width="100%"  frameborder="0" src="default.html"
+                <iframe height="100%" width="100%"  frameborder="0" src="default.aspx"
                     name="rightFrame" id="rightFrame" title="rightFrame"></iframe>
             </td>
             <td width="8" bgcolor="#353c44">
