--- a/ManageSYS/left.html
+++ b/ManageSYS/left.html
@@ -18,8 +18,6 @@
             });
             $('.subhead').next('ul').hide();
         });
-    </script>
-    <script type="text/javascript">
         $(function () {
             $('.subhead').click(function () {
                 var $ul = $(this).next('ul');
@@ -104,6 +102,7 @@
                     <li><a href="Authority/GroupConfig.aspx" target="rightFrame">角色管理</a></li>
                     <li><a href="Authority/LoginRecord.aspx" target="rightFrame">日志管理</a></li>
                     <li><a href="Authority/UserConfig.aspx" target="rightFrame">人员管理</a></li>
+                     <li><a href="Authority/MenuConfig.aspx" target="rightFrame">Map映射</a></li>
                     <li><a href="SysConfig/AptConfig.aspx" target="rightFrame">组织机构配置</a></li>
                     <li><a href="SysConfig/ExcelModel.aspx" target="rightFrame">报表模版管理</a></li>
                     <li><a href="SysConfig/TeamShift.aspx" target="rightFrame">班组班时配置</a></li>
