整理样式和JS

--- a/ManageSYS/center.html
+++ b/ManageSYS/center.html
@@ -29,9 +29,10 @@
                 <span id="switchPoint" title="关闭/打开左栏">
                     <img src="images/open.gif" name="img1" id="img1" alt="" /></span>
             </td>
-            <td valign="top">
+            <td valign="top" style=" height: 100%; position: relative">
                 <iframe height="100%" width="100%"  frameborder="0" src="default.aspx"
-                    name="rightFrame" id="rightFrame" title="rightFrame"></iframe>
+                    name="rightFrame" id="rightFrame" title="rightFrame" 
+                    style="position: relative"></iframe>
             </td>
             <td width="8" bgcolor="#353c44">
                 &nbsp;
